force-app/main/default/objects/Order/fields/API_JSON_Body__c.field-meta.xml
<CustomField>
    <fullName>API_JSON_Body__c</fullName>
    <label>API JSON Body</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>