force-app/main/default/objects/Order/fields/BillingAdministrativeArea__c.field-meta.xml
<CustomField>
    <fullName>BillingAdministrativeArea__c</fullName>
    <label>Billing Administrative Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>