force-app/main/default/objects/Order/fields/BillingFirstName__c.field-meta.xml
<CustomField>
    <fullName>BillingFirstName__c</fullName>
    <label>Billing First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>