force-app/main/default/objects/Order/fields/BillingHouseName__c.field-meta.xml
<CustomField>
    <fullName>BillingHouseName__c</fullName>
    <label>Billing House Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>