force-app/main/default/objects/Order/fields/BillingStreet1__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet1__c</fullName>
    <label>Billing Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>