force-app/main/default/objects/Order/fields/BillingStreet2__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet2__c</fullName>
    <label>Billing Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>