force-app/main/default/objects/Order/fields/BillingStreet3__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet3__c</fullName>
    <label>Billing Street 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>