force-app/main/default/objects/Order/fields/Created_timeHour__c.field-meta.xml
<CustomField>
    <fullName>Created_timeHour__c</fullName>
    <formula>VALUE(MID (TEXT (Created_DateTime__c - 0.1667), 12, 5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created timeHour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>