force-app/main/default/objects/Order/fields/Delivery_Method_new__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method_new__c</fullName>
    <description>possible delivery methods, replace badly defined (and unused) existing field</description>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>home</fullName>
            </value>
            <value>
                <fullName>pickuppoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>