force-app/main/default/objects/Order/fields/InvoiceID__c.field-meta.xml
<CustomField>
    <fullName>InvoiceID__c</fullName>
    <description>Invoice ID as sent from Magento</description>
    <label>InvoiceID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>