force-app/main/default/objects/Order/fields/is_Guest_Order__c.field-meta.xml
<CustomField>
    <fullName>is_Guest_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This order has been placed by a not logged-in customer</description>
    <inlineHelpText
  >This order has been placed by a not logged-in customer</inlineHelpText>
    <label>is Guest Order</label>
    <type>Checkbox</type>
</CustomField>