force-app/main/default/objects/Order/fields/Magento_SalesChannel_Name__c.field-meta.xml
<CustomField>
    <fullName>Magento_SalesChannel_Name__c</fullName>
    <label>Magento SalesChannel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>