force-app/main/default/objects/Order/fields/Net_Shipping_Fees__c.field-meta.xml
<CustomField>
    <fullName>Net_Shipping_Fees__c</fullName>
    <label>Net Shipping Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>