force-app/main/default/objects/Order/fields/Order_by_Device__c.field-meta.xml
<CustomField>
    <fullName>Order_by_Device__c</fullName>
    <label>Order by Device</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sample_Values</valueSetName>
    </valueSet>
</CustomField>