force-app/main/default/objects/Order/fields/OriginalBrand__c.field-meta.xml
<CustomField>
    <fullName>OriginalBrand__c</fullName>
    <description>Brand as sent from Magento</description>
    <label>OriginalBrand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>