force-app/main/default/objects/Order/fields/OriginalOrderReference__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderReference__c</fullName>
    <label>OriginalOrderReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>