force-app/main/default/objects/Order/fields/Pick_Up_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Location_Code__c</fullName>
    <label>Pick Up Location Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>