force-app/main/default/objects/Order/fields/Post_Number__c.field-meta.xml
<CustomField>
    <fullName>Post_Number__c</fullName>
    <label>Post Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>