force-app/main/default/objects/Order/fields/SalesChannelCountryCode__c.field-meta.xml
<CustomField>
    <fullName>SalesChannelCountryCode__c</fullName>
    <label>SalesChannelCountryCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>