force-app/main/default/objects/Order/fields/SalesChannelExternalReference__c.field-meta.xml
<CustomField>
    <fullName>SalesChannelExternalReference__c</fullName>
    <label>SalesChannelExternalReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>