force-app/main/default/objects/Order/fields/SalesChannelStoreID__c.field-meta.xml
<CustomField>
    <fullName>SalesChannelStoreID__c</fullName>
    <label>SalesChannelStoreID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>