force-app/main/default/objects/Order/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <label>Shipping Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>