force-app/main/default/objects/Order/fields/ShippingAdministrativeArea__c.field-meta.xml
<CustomField>
    <fullName>ShippingAdministrativeArea__c</fullName>
    <label>Shipping Administrative Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>