force-app/main/default/objects/Order/fields/ShippingFirstName__c.field-meta.xml
<CustomField>
    <fullName>ShippingFirstName__c</fullName>
    <label>Shipping First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>