force-app/main/default/objects/Order/fields/ShippingHouseName__c.field-meta.xml
<CustomField>
    <fullName>ShippingHouseName__c</fullName>
    <label>Shipping House Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>