force-app/main/default/objects/Order/fields/ShippingLastName__c.field-meta.xml
<CustomField>
    <fullName>ShippingLastName__c</fullName>
    <label>Shipping Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>