force-app/main/default/objects/Order/fields/ShippingStreet1__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet1__c</fullName>
    <label>Shipping Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>