force-app/main/default/objects/Order/fields/ShippingStreet3__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet3__c</fullName>
    <label>Shipping Street 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>