force-app/main/default/objects/Order/fields/Total_Offered_Price_Ex_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Offered_Price_Ex_VAT__c</fullName>
    <label>Total Offered Price Ex VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>