force-app/main/default/objects/Order/fields/Total_Ordered_SKU_s__c.field-meta.xml
<CustomField>
    <fullName>Total_Ordered_SKU_s__c</fullName>
    <label>Total Ordered SKU&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>