force-app/main/default/objects/Order/fields/Total_Paid_Price_Ex_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Price_Ex_VAT__c</fullName>
    <label>Total Paid Price Ex VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>