force-app/main/default/objects/Order/fields/Total_Promotion_Value_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Promotion_Value_Inc_VAT__c</fullName>
    <label>Total Promotion Value Inc VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>