force-app/main/default/objects/Order/fields/Voucher_External_Ids__c.field-meta.xml
<CustomField>
    <fullName>Voucher_External_Ids__c</fullName>
    <label>Voucher External Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>